--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
       <!-- Google Fonts -->
       <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel='stylesheet' type='text/css'>
       <link href="http://fonts.googleapis.com/css?family=Raleway:300,400,700" rel='stylesheet' type='text/css'>
+      
+      <!-- Icon -->
+      <link rel="shortcut icon" href="./images/atom.png">
   </head>
   <body>
     <div class="site">
@@ -31,7 +34,9 @@
             {% for post in site.posts %}
               <li class="post-link">
                 <a class="post-title" href="{{ post.url }}">
-                  <span class="post-date">{{ post.date | date_to_string }}</span>
+<!--                  {% if page.date %}-->
+<!--                    <span class="post-date">{{ post.date | date_to_string }}</span>-->
+<!--                  {% endif %}-->
                   {{ post.title }}
                 </a>
               </li>
@@ -41,9 +46,9 @@
         </div>
         <div class="footer">
           <span id="footer-links">
-            <!-- <a href="" class="footer-link">About</a> <span class="separator">&bull;</span> -->
-            <!-- <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span> -->
-            <!-- <a href="" class="footer-link">GitHub</a> -->
+<!--             <a href="" class="footer-link">About</a> <span class="separator">&bull;</span> -->
+<!--             <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>-->
+<!--             <a href="" class="footer-link">GitHub</a>-->
           </span>
         </div>
       </div>
