fixed link to cv

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
                 </a>
               </li>
             {% endfor %}
-              <span class="tagline"><a href="{{ site.url }}/papers/milosatz_cv.pdf" class="post-title">CV</a></span>
+              <span class="tagline"><a href="{{ site.url }}/papers/milosatz_CV.pdf" class="post-title">CV</a></span>
           </ul>
         </div>
         <div class="footer">
