--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,21 +34,17 @@
             {% for post in site.posts %}
               <li class="post-link">
                 <a class="post-title" href="{{ post.url }}">
-<!--                  {% if page.date %}-->
-<!--                    <span class="post-date">{{ post.date | date_to_string }}</span>-->
-<!--                  {% endif %}-->
                   {{ post.title }}
                 </a>
               </li>
             {% endfor %}
-              <span class="tagline"><a href="{{ site.url }}/papers/milosatz_cv.pdf" class="post-title">CV</a></span>
+            <span class="tagline"><a href="{{ site.url }}/papers/milosatz_cv.pdf" class="post-title">CV</a></span>
           </ul>
         </div>
         <div class="footer">
           <span id="footer-links">
-<!--             <a href="" class="footer-link">About</a> <span class="separator">&bull;</span> -->
-<!--             <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>-->
-<!--             <a href="" class="footer-link">GitHub</a>-->
+            <!--<a href="" class="footer-link">TITLE</a> <span class="separator">&bull;</span> -->
+            <!--<a href="" class="footer-link">TITLE</a>-->
           </span>
         </div>
       </div>
